--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-logs/
-npm-debug.log
-yarn-error.log
-node_modules/
-package-lock.json
-yarn.lock
-dist/
-.idea/
-.vscode/
+node_modules
 .DS_Store
+dist
+dist-ssr
+*.local
+*.zip
 *.log
+*.lock
+.vscode/
+.idea/
